--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,5 +2,7 @@ FROM pandaman64/satysfi
 
 WORKDIR /tmp
 
+COPY ./entrypoint.sh .
+
 ENTRYPOINT ["/home/opam/.opam/4.05.0/bin/satysfi", "-o", "output.pdf", "input.saty"]
 
