--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -11,7 +11,7 @@ rocket = "0.3.6"
 rocket_codegen = "0.3.6"
 sha2 = "0.7.0"
 
-tempfile = "2.2.0"
+rocket_cors = "0.2.1"
 
 [dependencies.rocket_contrib]
 version = "*"
