--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -6,6 +6,7 @@ authors = ["pandaman64 <kointosudesuyo@infoseek.jp>"]
 [dependencies]
 serde = "1.0"
 serde_derive = "1.0"
+serde_json = "1.0"
 
 rocket = "0.3.6"
 rocket_codegen = "0.3.6"
@@ -13,8 +14,10 @@ sha2 = "0.7.0"
 
 rocket_cors = "0.2.1"
 
+ot = { git = "https://github.com/pandaman64/ot.git" }
+
 [dependencies.rocket_contrib]
 version = "*"
 default-features = false
-features = ["json", "tera_templates"]
+features = ["json", "tera_templates", "uuid"]
 
