--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -16,6 +16,9 @@ rocket_cors = "0.2.1"
 
 ot = { git = "https://github.com/pandaman64/ot.git" }
 
+failure = "0.1.1"
+failure_derive = "0.1.1"
+
 [dependencies.rocket_contrib]
 version = "*"
 default-features = false
