--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -7,9 +7,12 @@ authors = ["pandaman64 <kointosudesuyo@infoseek.jp>"]
 crate-type = ["cdylib"]
 
 [dependencies]
-wasm-bindgen = "0.1"
 ot = { git = "https://github.com/pandaman64/ot.git" }
 serde = "1.0"
+serde_derive = "1.0"
 serde_json = "1.0"
 failure = "0.1.1"
 failure_derive = "0.1.1"
+futures = "0.2.0-alpha"
+futures-util = "0.2.0-alpha"
+stdweb = "0.4.2"
