--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -13,6 +13,9 @@ serde_derive = "1.0"
 serde_json = "1.0"
 failure = "0.1.1"
 failure_derive = "0.1.1"
-futures = "0.2.0-alpha"
-futures-util = "0.2.0-alpha"
-stdweb = "0.4.2"
+futures = "0.1.18"
+lazy_static = "1.0"
+
+[dependencies.stdweb]
+git = "https://github.com/koute/stdweb.git"
+features = [ "experimental_features_which_may_break_on_minor_version_bumps" ]
