--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -14,7 +14,9 @@ serde_json = "1.0"
 failure = "0.1.1"
 failure_derive = "0.1.1"
 futures = "0.1.18"
+subject = { path = "../subject" }
 
 [dependencies.stdweb]
 git = "https://github.com/koute/stdweb.git"
 features = [ "experimental_features_which_may_break_on_minor_version_bumps" ]
+
