--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -19,7 +19,7 @@ ot = { git = "https://github.com/pandaman64/ot.git" }
 failure = "0.1.1"
 failure_derive = "0.1.1"
 
-uuid = { version = "0.6.2", features = ["v4"] }
+uuid = { version = "0.6.2", features = ["v4", "serde"] }
 
 lazy_static = "1.0"
 
