--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -13,9 +13,10 @@ serde_derive = "1.0"
 serde_json = "1.0"
 failure = "0.1.1"
 failure_derive = "0.1.1"
-futures = "0.1.18"
+futures = "0.2"
+uuid = { version = "0.6", features = ["v4", "serde"] }
 
 [dependencies.stdweb]
 git = "https://github.com/koute/stdweb.git"
-features = [ "experimental_features_which_may_break_on_minor_version_bumps" ]
+features = [ "experimental_features_which_may_break_on_minor_version_bumps", "nightly" ]
 
