--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -24,9 +24,12 @@ uuid = { version = "0.6.2", features = ["v4", "serde"] }
 
 lazy_static = "1.0"
 
-tokio-fs = "0.1.4"
 tokio-process = "0.2.3"
 tokio-timer = "0.2.8"
 
-futures = "0.1"
+futures-preview = "0.3.0-alpha.11"
+
+[dependencies.tokio]
+git = "https://github.com/tokio-rs/tokio.git"
+features = ["async-await-preview"]
 
