--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -9,10 +9,11 @@ serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
 
-actix-web = "0.6"
+actix-web = "0.7"
 
 tera = "0.11"
 
+log = "0.4.6"
 env_logger = "0.5"
 
 sha2 = "0.7.0"
@@ -27,7 +28,9 @@ lazy_static = "1.0"
 tokio-process = "0.2.3"
 tokio-timer = "0.2.8"
 
-futures-preview = "0.3.0-alpha.11"
+[dependencies.futures-preview]
+version = "0.3.0-alpha.11"
+features = ["compat", "tokio-compat"]
 
 [dependencies.tokio]
 git = "https://github.com/tokio-rs/tokio.git"
