--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -27,12 +27,12 @@ lazy_static = "1.0"
 
 tokio-process = "0.2.3"
 tokio-timer = "0.2.8"
+tokio = { version = "0.1.18", features = ["async-await-preview"] }
 
 [dependencies.futures-preview]
-version = "0.3.0-alpha.13"
+version = "0.3.0-alpha.14"
 features = ["compat", "io-compat"]
 
-[dependencies.tokio]
-git = "https://github.com/tokio-rs/tokio.git"
-features = ["async-await-preview"]
-
+[patch.crates-io]
+tokio = { git = "https://github.com/tokio-rs/tokio.git" }
+tokio-async-await = { git = "https://github.com/tokio-rs/tokio.git" }
