--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -8,4 +8,7 @@ edition = "2018"
 [dependencies]
 actix-rt = "2.2.0"
 actix-web = "4.0.0-beta.9"
+base64 = "0.13.0"
+env_logger = "0.9.0"
 serde = { version = "1.0.130", features = ["derive"] }
+tempfile = "3.2.0"
