--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -8,7 +8,10 @@ edition = "2018"
 [dependencies]
 actix-rt = "2.2.0"
 actix-web = "4.0.0-beta.9"
+aws-config = "0.0.26-alpha"
+aws-sdk-s3 = "0.0.26-alpha"
 base64 = "0.13.0"
 env_logger = "0.9.0"
+http = "0.2.5"
 serde = { version = "1.0.130", features = ["derive"] }
 tempfile = "3.2.0"
