--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -12,6 +12,9 @@ aws-config = "0.0.26-alpha"
 aws-sdk-s3 = "0.0.26-alpha"
 base64 = "0.13.0"
 env_logger = "0.9.0"
+hex = "0.4.3"
 http = "0.2.5"
 serde = { version = "1.0.130", features = ["derive"] }
+sha2 = "0.9.8"
 tempfile = "3.2.0"
+tracing = "0.1.29"
