--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+actix-cors = "0.6.0-beta.6"
 actix-rt = "2.5.0"
 actix-web = "4.0.0-beta.13"
 aws-config = "0.2.0"
