--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,8 @@ jobs:
       - uses: cachix/install-nix-action@v16
         with:
           nix_path: nixpkgs=channel:nixos-unstable
+          # For running nixosTest
+          extra_nix_config: "system-features = nixos-test benchmark big-parallel kvm"
       - uses: cachix/cachix-action@v10
         with:
           name: satysfi-playground
