--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,5 +22,4 @@ jobs:
         with:
           name: satysfi-playground
           authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
-      # - run: nix flake check
-      - run: nix build .#packages.x86_64-linux.server
+      - run: nix flake check
