--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^1.7.3",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
     "@monaco-editor/react": "^4.3.1",
+    "framer-motion": "^4.1.17",
     "monaco-editor": "^0.31.0",
     "next": "12.0.7",
     "react": "17.0.2",
