--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,8 @@
     "monaco-editor": "^0.31.0",
     "next": "12.0.7",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "swr": "^1.1.2-beta.0"
   },
   "devDependencies": {
     "@types/node": "16.11.12",
