--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,13 +8,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@chakra-ui/react": "^1.7.3",
-    "@emotion/react": "^11.7.1",
-    "@emotion/styled": "^11.6.0",
+    "@chakra-ui/react": "^1.8.6",
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
     "@monaco-editor/react": "^4.3.1",
     "framer-motion": "^4.1.17",
-    "monaco-editor": "^0.31.0",
-    "next": "12.0.7",
+    "monaco-editor": "^0.31.1",
+    "next": "^12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
@@ -23,7 +23,7 @@
     "@types/react": "17.0.37",
     "eslint": "8.4.1",
     "eslint-config-next": "12.0.7",
-    "eslint-config-prettier": "^8.3.0",
+    "eslint-config-prettier": "^8.5.0",
     "typescript": "4.5.4"
   }
 }
